Add ProductType and Rate
