# ClearArchitecture/Tibis.Application/ProductManagement/Queries/CreateProductRequest.cs
@@ -3,5 +3,5 @@ using Tibis.Application.ProductManagement.Models;
 
 namespace Tibis.Application.ProductManagement.Queries
 {
-    public record CreateProductRequest(string Name) : IRequest<ProductDto>;
+    public record CreateProductRequest(string Name, int ProductType, int Rate) : IRequest<ProductDto>;
 }
