# ClearArchitecture/Tibis.Domain/ProductManagement/ProductType.cs
@@ -1,0 +1,8 @@
+﻿namespace Tibis.Domain.ProductManagement
+{
+    public enum ProductType
+    {
+        RecurringCharge,
+        Usage
+    }
+}
